<resources>
    <string name="app_name" translatable="false">SmartAlertProject</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="second_fragment_label">Register page</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="map_id" translatable="false">8d5294dd9ccf9513</string>

    <!-- Descriptions -->
    <string name="earthquakeDescription">An earthquake is a move of earth mass</string>
    <string name="tornadoDescription">A violently rotating column of air that touches the ground and whips up debris in its path.</string>
    <string name="avalancheDescription">A large mass of snow, ice, and rock that suddenly slides down a mountainside.</string>
    <string name="landslideDescription">A large mass of rock, soil, or other debris that slides down a slope.</string>
    <string name="blizzardDescription">A severe snowstorm with strong winds and very low visibility.</string>
    <string name="stormDescription">A violent weather system with strong winds, heavy precipitation, and sometimes thunder and lightning.</string>
    <string name="tsunamiDescription">A giant wave caused by an underwater earthquake, volcanic eruption, or landslide.</string>
    <string name="floodsDescription">An overflow of water that submerges land that is usually dry.</string>
    <string name="industrialDescription">An uncontrolled event at an industrial facility that can cause harm to people, property, or the environment.</string>
    <string name="volcanoDescription">A mountain that erupts, spewing out lava, ash, and gas.</string>
    <string name="heatwaveDescription">A period of abnormally hot weather that can last for days or even weeks.</string>
    <string name="wildfireDescription">An uncontrolled fire in nature that spreads quickly and can cause extensive damage to forests, homes, and property.</string>
    <string name="accidentDescription">An uncontrolled release of radioactive material/hazardous chemicals from a plants or industries, which can have devastating consequences for human health and the environment.</string>

    <!-- Instructions -->
    <string name="tornadoInstruction">Seek immediate shelter in a basement, storm cellar, or interior room on the lowest floor away from windows and doors. If no safe room is available, lie flat in a ditch and cover your head and neck with your arms.</string>
    <string name="earthquakeInstruction">Drop, cover, and hold on. Drop to the ground, take cover under a sturdy desk or table, and hold on until the shaking stops. Stay away from windows, mirrors, and hanging objects.</string>
    <string name="avalancheInstruction">If caught in an avalanche path, try to move to the side of the slope and hold onto something sturdy. If escape is impossible, curl up in a ball and protect your head and neck with your arms.</string>
    <string name="landslideInstruction">Evacuate the area immediately if a landslide is imminent. Do not cross moving debris or enter unstable areas.</string>
    <string name="blizzardInstruction">Stay indoors where it is warm and avoid unnecessary travel. Dress warmly in layers if you must go outside. Stay informed about weather updates and road closures.</string>
    <string name="stormInstruction">Seek shelter in a sturdy building away from windows and doors. Close all windows and shutters. Do not drive through flooded areas.</string>
    <string name="tsunamiInstruction">Evacuate to higher ground immediately if a tsunami warning is issued. Do not wait for further instructions.</string>
    <string name="floodsInstruction">Evacuate the area immediately if flooding is imminent. Do not drive through flooded roads or attempt to walk through floodwaters. Follow instructions from emergency officials.</string>
    <string name="industrialInstruction">Follow instructions from emergency responders and stay away from the affected area. Stay informed about updates and potential evacuations.</string>
    <string name="volcanoInstruction">Follow evacuation orders and avoid areas downwind of the volcano. Wear protective clothing and mask if outdoors due to ashfall.</string>
    <string name="heatwaveInstruction">Stay cool and hydrated by drinking plenty of fluids and avoiding strenuous activity. Stay in air-conditioned spaces as much as possible. Check on vulnerable individuals like children and the elderly.</string>
    <string name="wildfireInstruction">Evacuate immediately if instructed by authorities. If unable to evacuate, close windows and doors and create a defensible space around your home. Follow official updates and instructions.</string>
    <string name="accidentInstruction">Follow instructions from emergency personnel. Seek shelter indoors and close all windows and doors. Cover exposed skin and hair. Evacuate if instructed. Stay informed about the situation and potential health risks.</string>

    <string name="accessToken" translatable="false">accessToken</string>
    <string name="refreshToken" translatable="false">refreshToken</string>
    <string name="userid" translatable="false">userId</string>
    <string name="jwtUserId" translatable="false">Id</string>
    <string name="jetUserRole" translatable="false">Role</string>
    <string name="userrole" translatable="false">userRole</string>
    <string name="expirationDate" translatable="false">exp</string>

    <string name="tornadoTag">Tornado</string>
    <string name="earthquakeTag">Earthquake</string>
    <string name="avalancheTag">Avalanche</string>
    <string name="landslideTag">Landslide</string>
    <string name="blizzardTag">Blizzard</string>
    <string name="stormTag">Storm</string>
    <string name="tsunamiTag">Tsunami</string>
    <string name="floodsTag">Floods</string>
    <string name="industrialTag">Industrial</string>
    <string name="volcanoTag">Volcano</string>
    <string name="heatwaveTag">Heatwave</string>
    <string name="wildfireTag">Wildfire</string>
    <string name="accidentTag">Accident</string>

    <string name="selectCategoryMessage">Select category before submitting</string>
    <string name="incidentSubmssionSuccessMessage">You have submitted your incident</string>
    <string name="fieldsValidationErrorMessageIncidentSubmission">Fields validation</string>
    <string name="incidentSubmissionError">Incident submission</string>
    <string name="selectCategoryHeaderMessage">Category</string>
    <string name="photoCaptureSucceededMessage">"Photo capture succeeded: "</string>
    <string name="permissionsCameraHeader">Permissions</string>
    <string name="permissionRequestDeniedMessage">Permission request denied</string>
    <string name="imageAttachedErrorHeader">Image attached</string>
    <string name="imageAttachedErrorMessage">The image could not be loaded</string>
    <string name="mapMarkerMessageSubmission1">"First submitted at "</string>
    <string name="mapsMarkerMessageSubmission2">"Total submissions: "</string>
    <string name="notificationContentFormatted">Civil protection at %s. \nA %s was submitted at %s in %s. \n\nInstructions:  %s \n\nDescription: %s</string>
    <string name="infoPromptNotification">More info at: %s</string>
    <string name="informationIncidentContentDescription">Information</string>
    <string name="rejectIncidentContentDescription">Reject</string>
    <string name="acceptIncidentContentDescription">Accept</string>
    <string name="incidentStateUpdateSuccess">Incident %s successfully</string>
    <string name="loginSuccessMessage">You have logged in!</string>
    <string name="loginErrorHeader">Login</string>
    <string name="registerSuccessMessage">You have a created a new account!</string>
    <string name="registerRequiredFieldMessage">Required fields</string>
    <string name="registerRequiredFieldMessageContent">Please fill out all fields before submitting</string>
    <string name="registrationErrorHeader">Registration</string>
    <string name="passwordsDoNotMatchError">Passwords do not match</string>
    <string name="passwordsDoMatchError">Passwords match</string>
    <string name="floatingBtnMainActivityDesc">message</string>
    <string name="fragmentCameraTakePhotoBtnText">Take photo</string>
    <string name="backButtonText">Back</string>
    <string name="signupButtonText">Sign up</string>
    <string name="usernameEmailLoginHint">Username/Email</string>
    <string name="passwordLoginHint">Password</string>
    <string name="incidentInfoCategoryLabel">Category:</string>
    <string name="incidentInfoSubmittedAtLabel">Submitted at:</string>
    <string name="incidentInfoAddressLabel">Address:</string>
    <string name="incidentInfoCommentsLabel">Comments:</string>
    <string name="incidentInfoSubmissionsLabel">Submissions:</string>
    <string name="incidentInfoPhotoLabel">Photo</string>
    <string name="statsLocationLabel">Location</string>
    <string name="statsDateActivationLabel">Activated</string>
    <string name="updateBtnText">Update</string>
    <string name="mapsViewBtnDesc">Maps view</string>
    <string name="sortSwitchBtnText">Ascending</string>
    <string name="submissionsTextHeader">Subs</string>
    <string name="actionsTextHeader">Actions</string>
    <string name="notificationHeader">Emergency notification: Extremely important</string>
    <string name="usernameRegisterHint">Username</string>
    <string name="confirmPasswordHint">Confirm password</string>
    <string name="phoneHint">Phone</string>
    <string name="registerBtnText">Register</string>
    <string name="emailHint">Email</string>
    <string name="lastnameHint">Lastname</string>
    <string name="firstnameHint">Firstname</string>
    <string name="asterisk" translatable="false">*</string>
    <string name="notificationImageDesc">Warning!!!</string>
    <string name="submitBtnText">Submit</string>
    <string name="submitNewIncidentHeader">Submit new incident</string>
    <string name="commentsSubmitIncidentLabel">Comments</string>
    <string name="takePhotoBtnText">Take photo</string>
    <string name="imageSubmissionText">Image submitted</string>
    <string name="registerHeader">Register account</string>
    <string name="first_fragment_label">SmartAlertProject</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="buttonSubOfficerText">Incident submissions</string>
    <string name="buttonMapOfficerText">Map</string>
    <string name="main_menu">Main menu</string>
    <string name="submitIncidentTextBtn">Submit incident</string>
    <string name="incidentsBtnCivText">Incidents</string>
    <string name="officer_incident_accept_message">Are you sure you want to warn all users fot this incident?</string>
    <string name="officer_incident_accept_title">Send notification to users</string>
    <string name="officer_incident_reject_title">Reject incident confirmation</string>
    <string name="officer_incident_reject_message">Are you sure you want to reject this submission?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="preview_date">Date</string>
    <string name="refreshTokenExpirationDate">refreshTokenExpirationDate</string>
    <string name="logout">Logout</string>


</resources>