<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".civilianFragments.IncidentStatsPreviewFragment"
android:padding="20dp">

    <ScrollView
        android:id="@+id/scroll_table"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@id/button_update_table"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/picker_sorting_order"
        app:layout_constraintVertical_bias="0.0">


        <TableLayout
            android:id="@+id/table_incidents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TableLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBarPreview"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FF4141"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/picker_sorting_class"
        app:layout_constraintVertical_bias="0.268" />

    <Button
        android:id="@+id/button_update_table"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginBottom="12dp"
        android:text="@string/updateBtnText"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_open_maps_view" />

    <ImageButton
        android:id="@+id/button_open_maps_view"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginBottom="12dp"
        android:background="@color/white"
        android:contentDescription="@string/mapsViewBtnDesc"
        android:padding="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/maps_icon"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_update_table"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/picker_sorting_class"
        android:layout_width="183dp"
        android:layout_height="51dp"
        android:layout_marginTop="8dp"
        android:entries="@array/sort_categoriesEn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/picker_sorting_order"
        android:layout_width="158dp"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:text="@string/sortSwitchBtnText"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toEndOf="@+id/picker_sorting_class"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>